# meeting-management

client/: Makefile
client-qt/: CMakeLists.txt
client-qt/deploy/: MeetingClient
client-qt/include/: groupdetaildialog.h  loginwidget.h  mainwindow.h  networkmanager.h  serverconfigdialog.h  studentwidget.h  teacherwidget.h
client-qt/src/: groupdetaildialog.cpp  loginwidget.cpp  main.cpp  mainwindow.cpp  networkmanager.cpp  serverconfigdialog.cpp  studentwidget.cpp  teacherwidget.cpp
client/include/: client.h
client/src/: main.c  network.c  ui.c
docs/: CHANGELOG.md  DESIGN.md  MECHANISM.md  context.md  mechanism client.md  payload.md
server/: Makefile  meeting.db  schema.sql
server/include/: server.h
server/include/core/: client_registry.h  database.h
server/include/handlers/: auth_handler.h  group_handler.h  meeting_handler.h  minutes_handler.h  slot_handler.h
server/include/utils/: utils.h
server/src/: handler.c  main.c  router.c
server/src/core/: client_registry.c  database.c
server/src/handlers/: auth_handler.c  group_handler.c  meeting_handler.c  minutes_handler.c  slot_handler.c
server/src/utils/: utils.c
